misc/kube-swagger-ui/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-swagger-ui.local.io
  labels:
    app: kube-swagger-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      -  "*.local.io"
      secretName: "local.io"
  rules:
    - host: kube-swagger-ui.local.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-swagger-ui
                port:
                  number: 80
